Login and Create new account
Login and create new account box are done

--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -34,7 +34,7 @@ Team Member:
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
             
-          <li><a href="#">Account</a></li>
+          <li><a href="account.html">Account</a></li>
             
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
