--- a/Lab6/account.html
+++ b/Lab6/account.html
@@ -135,6 +135,12 @@ Team Member:
                   <h1>Sign Up</h1>
                   <p>Please fill in this form to create an account.</p>
                   <hr>
+                  <!-- First Name box-->
+                  <label for="fname"><b>First Name</b></label>
+                  <input type="text" placeholder="Enter First Name" name="fname" required>
+                  <!-- Last Name box-->
+                  <label for="lname"><b>Last Name</b></label>
+                  <input type="text" placeholder="Enter Last Name" name="lname" required>
                   <!-- Email box-->
                   <label for="email"><b>Email</b></label>
                   <input type="text" placeholder="Enter Email" name="email" required>
@@ -144,6 +150,10 @@ Team Member:
                   <!-- Re-type Password box-->
                   <label for="psw-repeat"><b>Repeat Password</b></label>
                   <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                  <!-- Phone number box-->
+                  <label for="phone"><b>Phone Number</b></label>
+                  <input type="text" placeholder="Enter Phone Number" name="phone" required>
+
 
                   <label>
                     <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
@@ -216,7 +226,7 @@ Team Member:
 <script src="layout/scripts/jquery.min.js"></script>
 <script src="layout/scripts/jquery.mobilemenu.js"></script>
 <script>
-  var login = true;
+  var login = false;
 
   if(login==true){
 
