--- a/Lab6/account.html
+++ b/Lab6/account.html
@@ -117,7 +117,7 @@ Team Member:
                   <input type="password" placeholder="Enter Password" name="psw" required>
                     
                   <button class="btn" type="submit">Login</button>
-                  <label><input type="checkbox" checked="checked" name="remember"> Remember me</label>
+                  <input type="checkbox" checked="checked" name="remember">Remember me</br>
                 </div>
 
                 <div class="Logincontainer" style="background-color:#f1f1f1">
