--- a/Lab6/account.html
+++ b/Lab6/account.html
@@ -103,7 +103,7 @@ Team Member:
 
             <!-- User login to existing account-->
             <div id="id01" class="modal">
-              <form class="modal-content animate" action="/action_page.php">
+              <form action="/login" class="modal-content animate" method="post" >
                 <div class="Logincontainer">
                   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
                   <h1>Login</h1>
@@ -129,7 +129,7 @@ Team Member:
 
             <!-- User create new account-->
             <div id="id02" class="modal">
-              <form class="modal-content animate" action="/action_page.php">
+              <form action="/login" class="modal-content animate" method="post">
                 <div class="Logincontainer">
                   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
                   <h1>Sign Up</h1>
