--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -33,9 +33,8 @@ Team Member:
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
-            
-          <li><a href="account.html">Account</a></li>
-            
+          <li><a href="profile.html">Profile</a></li>
+          <li><a href="login.html">Login</a></li>
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
               <li><a href="#">Level 2</a></li>
