--- a/Lab6/login.html
+++ b/Lab6/login.html
@@ -33,9 +33,9 @@ Team Member:
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li><a href="index.html">Home</a></li>
+          <li><a href="post.html">Post</a></li>
           <li><a href="profile.html">Profile</a></li>
           <li class="active"><a href="login.html">Login</a></li>
-            
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
               <li><a href="#">Level 2</a></li>
