--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -33,6 +33,7 @@ Team Member:
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="post.html">Post</a></li>
           <li><a href="profile.html">Profile</a></li>
           <li><a href="login.html">Login</a></li>
           <li><a class="drop" href="#">Dropdown</a>
