--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -82,7 +82,7 @@ Team Member:
     <article class="group">
       <div class="one_half first">
         <h6 class="heading">How to find the best residence in you mind:</h6>
-        <p>Choose 3 different locations that you will visit most often during the time you living in the area.</p>
+        <p>Choose multiple different locations that you will visit most often during the time you living in the area.</p>
     
         <footer><a class="btn" href="/Lab6/backend/public/search.html">Search &raquo;</a></footer>
       </div>
